--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "serve -s build",
+    "start": "nodemon app.js",
     "heroku-postbuild": "npm run build"
   },
   "author": "",
